--- a/TestV3/appsettings.json
+++ b/TestV3/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-409OOSHC\\SQLEXPRESS;Initial Catalog=TestV3;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=LAPTOP-409OOSHC\\SQLEXPRESS;Initial Catalog=TestV3;Integrated Security=True;Encrypt=False;Trust Server Certificate=True;"
   },
   "Logging": {
     "LogLevel": {
